--- a/.github/workflows/greet-everyone.yml
+++ b/.github/workflows/greet-everyone.yml
@@ -1,7 +1,7 @@
 name: 01-2. Greet Everyone
 # This workflow is triggered on pushes to the repository.
 on: 
-  push:
+  #push:
   
   workflow_call:
     inputs:
