--- a/.github/workflows/simple-workflow.yml
+++ b/.github/workflows/simple-workflow.yml
@@ -4,7 +4,7 @@ name: 02-1. Simple Workflow
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
+  #push:
     #branches: [ main ]
   pull_request:
     branches: [ main ]
