--- a/.github/workflows/environments-secrets.yml
+++ b/.github/workflows/environments-secrets.yml
@@ -56,7 +56,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Step that uses the DEV environment
-        run: echo "Deployment to ${{ env.URL1 }}..."
+        run: echo "Deployment to ${{ env.URL }}..."
 
       - name: Echo env secret is redacted in the logs
         run: |
