--- a/.github/workflows/job-dependencies.yml
+++ b/.github/workflows/job-dependencies.yml
@@ -2,10 +2,11 @@ name: 02-2. Dependencies
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
   workflow_call:
-  #push:
-  #  branches:
-  #    - main
+
     
 jobs:
   initial:
