disable push to main

--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,10 +1,10 @@
 name: 07-1. CI Workflow
 
 # Trigger CI for every PR event, when PR has target branch = main
-on:
-  #push:
+ on:
+  push:
   #  branches: [main]
-  #pull_request:
+  pull_request:
   #  branches: [main]
 
 jobs:
