--- a/.github/workflows/job-dependencies.yml
+++ b/.github/workflows/job-dependencies.yml
@@ -1,11 +1,11 @@
 name: 02-2. Dependencies 
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
-  workflow_call:
+#on:
+#  workflow_dispatch:
+#  push:
+#    branches:
+#      - main
+#  workflow_call:
 
     
 jobs:
