--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -15,11 +15,11 @@ name: 04-2. Lint Code Base
 # Start the job on all push #
 #############################
 on:
-  push:
-    branches-ignore: [main]
-    # Remove the line above to run when pushing to main
-  pull_request:
-    branches: [main]
+ # push:
+ #   branches-ignore: [main]
+ #   # Remove the line above to run when pushing to main
+ # pull_request:
+ #   branches: [main]
   workflow_call:
 
 ###############
